<resources>
    <string name="app_name">CSI_Week_1</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="bounty">Bounty:</string>
    <string name="namevalue">Mr. Pietersma</string>
    <string name="gendervalue">Man</string>
    <string name="agevalue">50</string>
    <string name="bountyvalue">$50000</string>
    <string name="title_activity_report">ReportActivity</string>
</resources>
